Fixed iteration picker

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -82,12 +82,12 @@
                 project: null
             },
             filters: [{
-                property : 'TestCase.Project',
+                property : 'Project',
                 operator : '=',
                 value: projectRef
             }],
             fetch: [
-                'Name','FormattedID','WorkProduct','Iteration','Date','Verdict','Tester','ObjectID','Project'
+                'Name','FormattedID','WorkProduct','Iteration','Date','Verdict','Owner','ObjectID','Project'
             ],
             limit: 200,
             listeners: {
