Added iteration summary columns

--- a/deploy/App-uncompressed.html
+++ b/deploy/App-uncompressed.html
@@ -46,7 +46,20 @@
                         model: 'TestCase',
                         autoLoad: false
                     },
-                    columnCfgs: ['FormattedID', 'Name', {text: 'Tester', dataIndex: 'Owner'}]
+                    columnCfgs: ['FormattedID', 'Name', {text: 'Tester', dataIndex: 'Owner'}],
+                    showPagingToolbar: false
+                },
+                {
+                    xtype: 'rallygrid',
+                    itemId: 'testsBlockedGrid',
+                    title: '<B>Tests Blocked</B>',
+                    emptyText: 'No Blocked Test Cases',
+                    storeConfig: {
+                        model: 'TestCase',
+                        autoLoad: false
+                    },
+                    columnCfgs: ['FormattedID', 'Name', {text: 'Tester', dataIndex: 'Owner'}],
+                    showPagingToolbar: false
                 },
                 {
                     xtype: 'rallygrid',
@@ -57,7 +70,8 @@
                         model: 'TestCase',
                         autoLoad: false
                     },
-                    columnCfgs: ['FormattedID', 'Name', {text: 'Tester', dataIndex: 'Owner'}]
+                    columnCfgs: ['FormattedID', 'Name', {text: 'Tester', dataIndex: 'Owner'}],
+                    showPagingToolbar: false
                 },
                 {
                     xtype: 'rallygrid',
@@ -68,7 +82,8 @@
                         model: 'TestCase',
                         autoLoad: false
                     },
-                    columnCfgs: ['FormattedID', 'Name', {text: 'Tester', dataIndex: 'Owner'}]
+                    columnCfgs: ['FormattedID', 'Name', {text: 'Tester', dataIndex: 'Owner'}],
+                    showPagingToolbar: false
                 }
             ]
         });
@@ -124,6 +139,7 @@
         this.down('#testsFailedGrid').getStore().loadData(testCasesByVerdictMap.Fail || []);
         this.down('#testsNotRunGrid').getStore().loadData(testCasesByVerdictMap.NotRun || []);
         this.down('#testsPassedGrid').getStore().loadData(testCasesByVerdictMap.Pass || []);
+        this.down('#testsBlockedGrid').getStore().loadData(testCasesByVerdictMap.Blocked || []);
     },
 
     _buildSummaryGridConfig: function() {
@@ -131,7 +147,11 @@
             extend: 'Ext.data.Model',
             fields: [
                 {name: 'Name',  type: 'string'},
-                {name: '_ref',  type: 'string'}
+                {name: '_ref',  type: 'string'},
+                {name: 'Pass', type: 'number'},
+                {name: 'Fail', type: 'number'},
+                {name: 'NotRun', type: 'number'},
+                {name: 'Blocked', type: 'number'},
             ]
         });
 
@@ -157,10 +177,28 @@
             emptyText: 'No In-Progress test cases for this project',
             columns: {
                 items: [
+                
                     {
                         text: 'Name',
                         dataIndex: 'Name'
+                    },
+                    {
+                        text: 'Failed',
+                        dataIndex: 'Fail'
+                    },
+                    {
+                        text: 'Blocked',
+                        dataIndex: 'Blocked'
+                    },
+                    {
+                        text: 'Not Run',
+                        dataIndex: 'NotRun'
+                    },
+                    {
+                        text: 'Passed',
+                        dataIndex: 'Pass'
                     }
+                    
                 ],
                 defaults: {
                     flex: 1
@@ -219,10 +257,20 @@
 
                 if (!results[iterationId]) {
                     results[iterationId] = iterationData;
-                }
+                } 
+
+                this._updateIterationVerdictCounts(testCase, results[iterationId]);
             }
             return results;
         }, {}, this);
+    },
+
+    _updateIterationVerdictCounts: function(testCase, iterationData) {
+        var lastVerdict = testCase.get('LastVerdict') || 'NotRun'; 
+        if (!iterationData[lastVerdict]) {
+            iterationData[lastVerdict] = 0;
+        }
+        iterationData[lastVerdict] += 1;
     }
 });
 
